testdata/invalid/double_comma.pr
// Double comma in array literal.
main() {
  Int[] a = [1,, 2];
}
